[package]
name = "mvc_example"
version = "0.1.0"
authors = ["Mike Tang <miketang84@outlook.com>"]

[dependencies]
sapper = { git="https://github.com/sappworks/sapper.git" }
sporm = { git="https://github.com/sappworks/sporm.git" }
sapper_request_basic_logger = { git="https://github.com/sappworks/sapper_request_basic_logger" }
sapper_tmpl = { git="https://github.com/sappworks/sapper_tmpl" }
sapper_query_params = { git="https://github.com/sappworks/sapper_query_params" }
sapper_body_params = { git="https://github.com/sappworks/sapper_body_params" }
sapper_macros = { git="https://github.com/sappworks/sapper_macros" }

log = "0.3"
env_logger = "0.3"
dotenv = "0.8"
typemap = "0.3"
chrono = "0.2"
serde = "0.7"
serde_json = "0.7"
