[package]
name = "mvc_example"
version = "0.1.0"
authors = ["Mike Tang <miketang84@outlook.com>"]

[dependencies]
sapper = { git="https://github.com/sappworks/sapper.git" }
sapper_std = { git="https://github.com/sappworks/sapper_std.git" }

typemap = "*"
log = "0.3.7"
env_logger = "0.4.2"
serde="1.0.7"
serde_json="1.0.2"
serde_derive="1.0.8"
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
chrono = "0.4"

